@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PGPLOT/PGPLOT-2.210.0.ebuild,v 1.4 2013/04/16 17:19:49 vincent Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PGPLOT/PGPLOT-2.210.0.ebuild,v 1.5 2014/08/04 17:43:32 zlogene Exp $
 
 EAPI=4
 
@@ -8,7 +8,7 @@ MODULE_AUTHOR=KGB
 MODULE_VERSION=2.21
 inherit perl-module
 
-DESCRIPTION="allow subroutines in the PGPLOT graphics library to be called from Perl."
+DESCRIPTION="allow subroutines in the PGPLOT graphics library to be called from Perl"
 
 SLOT="0"
 KEYWORDS="~amd64 ~arm ~ia64 ~ppc ~x86 ~amd64-linux ~x86-linux"
