@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/PGPLOT
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PGPLOT/ChangeLog,v 1.20 2013/04/16 17:58:21 vincent Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PGPLOT/ChangeLog,v 1.21 2014/08/04 17:43:32 zlogene Exp $
+
+  04 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> PGPLOT-2.210.0.ebuild:
+  Fix DESCRIPTION
 
   16 Apr 2013; Vicente Olivert Riera <vincent@gentoo.org> PGPLOT-2.210.0.ebuild:
   Adding ~ppc keyword for dev-perl/PDL and his dependences, wrt bug #449762
